# oku-image-processer

./: README.md  pubspec.yaml  setup.iss
android/app/: build.gradle.kts
conductor/: fix-utf8-paths.md  index.md  min-font-size.md  product.md  tech-stack.md  tracks.md
conductor/tracks/mvp/: index.md  metadata.json  plan.md  spec.md
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  theme.dart
lib/layout/: main_layout.dart
lib/providers/: auth_provider.dart  file_provider.dart  history_provider.dart  l10n_provider.dart  processing_provider.dart  settings_provider.dart  watermark_template_provider.dart
lib/src/native/: image_processor_bindings.dart
lib/widgets/common/: format_chip.dart  input_row.dart  lock_icon_button.dart  overlay_button.dart
lib/widgets/layout/: auth_view.dart  custom_title_bar.dart  dropzone_area.dart  file_list_view.dart  history_list_view.dart  profile_view.dart  properties_panel.dart  settings_view.dart  sidebar.dart  watermark_templates_view.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
native/: CMakeLists.txt  image_processor.cpp  image_processor.h
test/: file_provider_test.dart  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: CMakeLists.txt  Runner.rc  main.cpp
(+3 files in other folders)
